SUBDIRS = src glibmm

EXTRA_DIST = README glibmmconfig.h.in glibmm-2.0.pc.in

glibmm_includedir	= $(includedir)/gtkmm-2.0
glibmm_include_HEADERS	= glibmm.h

glibmm_configdir	= $(libdir)/gtkmm-2.0/include
glibmm_config_DATA	= glibmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= glibmm-2.0.pc

