SUBDIRS = src glibmm

EXTRA_DIST = README glibmmconfig.h.in glibmm-2.4.pc.in

glibmm_includedir	= $(includedir)/gtkmm-2.4
glibmm_include_HEADERS	= glibmm.h

glibmm_configdir	= $(libdir)/gtkmm-2.4/include
glibmm_config_DATA	= glibmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= glibmm-2.4.pc

